@@ -35,7 +35,7 @@ tasks {
             nativeBuildDir.mkdir()
         }
         workingDir = nativeBuildDir
-        commandLine = listOf("cmake", "../../..")
+        commandLine = listOf("cmake", "../../..", "-DCMAKE_BUILD_TYPE=Debug")
     }
 
     register<Exec>("ctest") {
@@ -61,5 +61,11 @@ tasks {
 
     test {
         dependsOn.add("ctest")
+        jvmArgs = listOf("--add-modules", "jdk.incubator.foreign",
+            "--enable-native-access=edu.kit.satviz.consumer")
+    }
+
+    compileTestJava {
+        options.compilerArgs = listOf("--add-modules", "jdk.incubator.foreign")
     }
 }
